adding active fires as layer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   crossorigin=""/>
   
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
@@ -27,10 +27,14 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.1.1/d3.min.js"></script>
   <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
+     <!-- needed for d3 -->
+     <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+     <!-- jquery file -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Our JavaScript -->
-  <script type = "text/javascript" src = "static/js/config.js"></script>
+  <script type = "text/javascript" src = "js/config.js"></script>
   <!-- https://leafletjs.com/examples/choropleth/ -->
   <script type="text/javascript" src="us-states.js"></script>
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="js/logic.js"></script>
 </body>
 </html>
