--- a/Ryan/index.html
+++ b/Ryan/index.html
@@ -17,7 +17,9 @@
     <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-    <script type="text/javascript" src="plots.js"></script>
+    <!-- <script type="text/javascript" src="plots.js"></script> -->
+    <script type="text/javascript" src="news.js"></script>
+
 </body>
 
 </html>
