--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
   <!-- D3 JavaScript -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.1.1/d3.min.js"></script>
-  <!-- <script src="https://d3js.org/d3.v6.min.js"></script> -->
-  <script src="https://d3js.org/d3.v4.min.js"></script>
+  <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.1.1/d3.min.js"></script> -->
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
      <!-- needed for d3 -->
      <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
      <!-- jquery file -->
