allowing map to be shown in iframe on html

--- a/index2.html
+++ b/index2.html
@@ -19,19 +19,8 @@
 <body>
 
   <!-- The div that holds our map -->
-  <!-- <div id="map"></div> -->
-  <div class = "container">
-    <div class = "row">
-        <h1>
-          Testing
-        </h1>
-    </div>
-    <div class = "row" style = "margin-left: 200px">
-      <div class = "col-md-12"></div>
-      <iframe src="index2.html" width="800" height="800" frameborder="0"></iframe>
-    </div>
-    
-  </div>
+  <div id="map"></div>
+
 
   <!-- Leaflet JavaScript -->
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
