--- a/index2.html
+++ b/index2.html
@@ -34,6 +34,7 @@
      <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
      <!-- jquery file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src = "js/nouislider.js"></script>
   <!-- Our JavaScript -->
   <script type = "text/javascript" src = "js/config.js"></script>
   <!-- https://leafletjs.com/examples/choropleth/ -->
