--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
   crossorigin=""/>
+
+  <!-- Slider CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.2/nouislider.css
+
+
+
+  ">
   
 
   
@@ -26,13 +33,16 @@
           Testing
         </h1>
     </div>
+    <div id = "slider" style = "width: 500px;"></div>
+    <div>Testing</div>
     <div class = "row" style = "margin-left: 200px">
-      <div class = "col-md-12"></div>
-      <iframe src="index2.html" width="800" height="800" frameborder="0"></iframe>
+      <div id = "map" class = "col-md-12"></div>
+      <iframe src="index2.html" width="800" height="800" frameborder="10"></iframe>
     </div>
     
   </div>
 
+ 
   <!-- Leaflet JavaScript -->
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
@@ -44,7 +54,11 @@
      <!-- needed for d3 -->
      <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
      <!-- jquery file -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Slider js -->
+  <!-- <script src = "https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.2/nouislider.js"></script> -->
+  <script src = "js/nouislider.js"></script>
   <!-- Our JavaScript -->
   <script type = "text/javascript" src = "js/config.js"></script>
   <!-- https://leafletjs.com/examples/choropleth/ -->
