--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
 
   
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
 
@@ -34,11 +34,11 @@
      <!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
      <!-- jquery file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src = "js/nouislider.js"></script>
+    <script src = "static/js/nouislider.js"></script>
   <!-- Our JavaScript -->
-  <script type = "text/javascript" src = "js/config.js"></script>
+  <script type = "text/javascript" src = "static/js/config.js"></script>
   <!-- https://leafletjs.com/examples/choropleth/ -->
-  <script type="text/javascript" src="us-states.js"></script>
-  <script type="text/javascript" src="js/logic.js"></script>
+  <script type="text/javascript" src="static/js/us-states.js"></script>
+  <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
