--- a/index.html
+++ b/index.html
@@ -12,18 +12,13 @@
   crossorigin=""/>
 
   <!-- Slider CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.2/nouislider.css
-
-
-
-  ">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.2/nouislider.css">
   
 
-  
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
-<body>
+<body >
 
   <!-- The div that holds our map -->
   <!-- <div id="map"></div> -->
@@ -33,7 +28,12 @@
           Testing
         </h1>
     </div>
-    <div id = "slider" style = "width: 500px;"></div>
+    <!-- <div id = "slider" style = "width: 500px;"></div> -->
+    <select name="" id="input-select"></select>
+   <!-- slider -->
+    <div id = "html5" class = "padding" style = "width: 500px;"></div>
+    
+    
     <div>Testing</div>
     <div class = "row" style = "margin-left: 200px">
       <div id = "map" class = "col-md-12"></div>
@@ -58,11 +58,11 @@
 
     <!-- Slider js -->
   <!-- <script src = "https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.2/nouislider.js"></script> -->
-  <script src = "js/nouislider.js"></script>
+  <script src = "static/js/nouislider.js"></script>
   <!-- Our JavaScript -->
-  <script type = "text/javascript" src = "js/config.js"></script>
+  <script type = "text/javascript" src = "static/js/config.js"></script>
   <!-- https://leafletjs.com/examples/choropleth/ -->
-  <script type="text/javascript" src="us-states.js"></script>
-  <script type="text/javascript" src="js/logic.js"></script>
+  <script type="text/javascript" src="static/js/us-states.js"></script>
+  <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
