updating contained fire data

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body >
 
@@ -30,6 +32,7 @@
     </div>
     <!-- <div id = "slider" style = "width: 500px;"></div> -->
     <select name="" id="input-select"></select>
+    
    <!-- slider -->
     <div id = "html5" class = "padding" style = "width: 500px;"></div>
     
