--- a/Ryan/index.html
+++ b/Ryan/index.html
@@ -10,15 +10,20 @@
 <body>
 
     <p>Here it is.</p>
+    <p id= "news"></p>
     <!-- <div id='chart'></div> -->
     <canvas id="myChart"></canvas>
+    <canvas id="myChart2"></canvas>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
     <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
     <!-- <script type="text/javascript" src="plots.js"></script> -->
-    <script type="text/javascript" src="news.js"></script>
+    <!-- <script type="text/javascript" src="news.js"></script> -->
+    <script type="text/javascript" src="two_pies.js"></script>
+
 
 </body>
 
