updating index.html

--- a/index.html
+++ b/index.html
@@ -51,8 +51,39 @@
     <!-- slider 1 -->
     <div id="html5" class="padding" style="width: 500px;"></div>
     <!-- date slider -->
+    <br>
+    <p id = "date_select">Date selected: </p>
+    <br>
     <div id="slider-date"></div>
     <div id="event-start"></div>
+    <br>
+    <div class = "row">
+      <div class = "col-md-8">
+        <h1>Chart 1</h1>
+      </div>
+      <div class = "col-md-4">
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quis nihil maiores. Eos impedit laboriosam omnis in mollitia explicabo harum ratione natus aliquid sequi, magnam placeat, voluptatem dignissimos, ut sunt?
+      </p>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "col-md-4">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate consectetur atque, reiciendis ducimus facere inventore obcaecati voluptatibus minima ea dolorem consequuntur itaque soluta, dignissimos reprehenderit voluptas deserunt expedita laboriosam officia.</p>
+      </div>
+      <div class = "col-md-8" >
+        <h2>Chart 2</h2>
+      </div>
+      <div class = "row">
+        <div class = "col-md-8">
+          <h2>Chart 3</h2>
+        </div>
+        <div class = "col-md-4">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum, dolorem? Soluta voluptatibus alias, recusandae beatae eum temporibus illo quod, quis molestias similique, voluptas officia neque consequatur maiores natus quasi libero?</p>
+        </div>
+      </div>
+
+    </div>
     <!-- <div id = "slider"></div> -->
 
     <div>Testing</div>
