--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@
     <div>Testing</div>
     <div class="row">
         <!-- The div that holds our map -->
-      <div id="map" class="col-md-12"></div>
+      <div id="map" class="col-md-6"></div>
       <iframe src="index2.html" width="800" height="800" frameborder="10"></iframe>
+    
+    <div class = "col-md-2">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore architecto quis dolores ad iste assumenda sed distinctio facilis! Maiores, dignissimos similique! Tempora dolores distinctio eligendi reiciendis. Obcaecati consectetur cumque delectus?</p>
     </div>
+  </div>
 
   </div>
 
