--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         <!-- Leaflet JavaScript -->
         <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
         <!-- D3 JavaScript -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
+        <script src="https://d3js.org/d3.v6.min.js"></script>
         <!-- Our JavaScript -->
-        <script type="text/javascript" src="static/js/logic.js"></script>
+        <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
+        <script type="text/javascript" src="static/js/airPollution.js"></script>
         <!-- API Key-->
         <script type="text/javascript" src="static/js/config.js"></script>
       </body>
