added comparison dropdown for unemployment data visualization

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       
         <!-- The div that holds our map -->
         <!-- <div id="map"></div> -->
-
+        <div class="custom-select" style="width:200px;">
+          <select name="Compare" id="compare"></select>
+        </div>
         <div id="unemployment"></div>
       
         <!-- Leaflet JavaScript -->
