added listener and implemented comparison line based on dropdown selection

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- The div that holds our map -->
         <!-- <div id="map"></div> -->
         <div class="custom-select" style="width:200px;">
-          <select name="Compare" id="compare"></select>
+          <select name="Compare" id="compare" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
         </div>
         <div id="unemployment"></div>
       
