--- a/approval_ratings/index.html
+++ b/approval_ratings/index.html
@@ -10,13 +10,10 @@
 </head>
 <body>
 
-    <canvas id="approval_chart"></canvas>
-    <div id='plotly_chart'></div>
+    <div id='approval_plot'></div>
 
     <!-- d3 v6 -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <!-- chart.js -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <!-- plotly js -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!-- math.js -->
