start stock visualization

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <!-- Our JavaScript -->
         <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
         <!-- <script type="text/javascript" src="static/js/airPollution.js"></script> -->
-        <script type="text/javascript" src="static/js/unemployment.js"></script>
+        <!-- <script type="text/javascript" src="static/js/unemployment.js"></script> -->
+        <script type="text/javascript" src="static/js/stock.js"></script>
         <!-- API Key-->
         <script type="text/javascript" src="static/js/config.js"></script>
       </body>
