--- a/page_design/material-kit-master/index.html
+++ b/page_design/material-kit-master/index.html
@@ -29,6 +29,8 @@ The above copyright notice and this permission notice shall be included in all c
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- CSS Files -->
   <link href="./assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+  <link href="./assets/css/styles.css" rel="stylesheet" />
 </head>
 
 <body class="landing-page sidebar-collapse">
@@ -41,7 +43,7 @@ The above copyright notice and this permission notice shall be included in all c
       </div>
       <div style='width: 400px;'>
         <h5 id='date_select'>Pick a date to observe:</h5>
-            <div id="sliderRegular" class="slider"></div>
+        <div id="sliderRegular" class="slider"></div>
       </div>
     </div>
     </div>
@@ -54,7 +56,8 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="col-md-6">
           <h1 class="title">Looking back on the year 2020</h1>
           <h4>An eventful period of time to say the least. Take a closer look at some of the major occurrences in the
-            United States this year, and how they shaped the country.<br><br>Start by selecting a date with the slider above.</h4>
+            United States this year, and how they shaped the country.<br><br>Start by selecting a date with the slider
+            above.</h4>
           <br>
         </div>
       </div>
@@ -62,183 +65,75 @@ The above copyright notice and this permission notice shall be included in all c
   </div>
   <div class="main main-raised">
     <div class="container">
-      <div class="section text-center">
-        <div class='row'>
-          <div class='col-6'>
-            <!-- getty images carousel, max 5 images -->
-            <h3 align='left'>Worth 1,000 words</h3>
-            <h5 class='description' align='left'>Five dramatic images in one year, courtesy of Getty Images.</h5>
-            <a id='8cDGyMtfQyhe_spkh4vHYg' class='gie-slideshow' href='http://www.gettyimages.com/detail/1198921166' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'8cDGyMtfQyhe_spkh4vHYg',sig:'sw7OXsna6OJheqHdNpGl7q_w1wCd2SN2h6vPl_jqJFo=',w:'594px',h:'437px',items:'1198921166,1207384785,609664754,1212154390,1228639951',caption: true ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
-          </div>
-          <div class='col-6'>
-            <h3 align='right'>A look at the country today</h3>
-            <h5 class='description' align='right'>Explore data on ongoing protests and wildfires.</h5>
-            <div id='map'>map could go here</div>
+      <!-- <div class="section text-center"> -->
+      <div class='row'>
+        <div class='col-md-5'>
+          <!-- getty images carousel, max 5 images; maybe create one for every month -->
+          <h3 align='left'>Worth 1,000 words</h3>
+          <h5 class='description' align='left'>Five dramatic images in one year, courtesy of Getty Images.</h5>
+          <a id='8cDGyMtfQyhe_spkh4vHYg' class='gie-slideshow' href='http://www.gettyimages.com/detail/1198921166'
+            target='_blank'
+            style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed
+            from Getty Images</a>
+          <script>window.gie = window.gie || function (c) { (gie.q = gie.q || []).push(c) }; gie(function () { gie.widgets.load({ id: '8cDGyMtfQyhe_spkh4vHYg', sig: 'sw7OXsna6OJheqHdNpGl7q_w1wCd2SN2h6vPl_jqJFo=', w: '594px', h: '437px', items: '1198921166,1207384785,609664754,1212154390,1228639951', caption: true, tld: 'com', is360: false }) });</script>
+          <script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
+        </div>
+        <div class='col-md-7'>
+          <h3 align='right'>A look at the country today</h3>
+          <h5 class='description' align='right'>Explore data on ongoing protests and wildfires.</h5>
+          <div id='map' align='right'>map could go here</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class='col-7'>
+          <div id='us_plot'></div>
+        </div>
+        <div class='col-5'>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">State Info</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Select a state to view more specific data.</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <div id='state_cases'></div>
+            </div>
           </div>
         </div>
+      </div>
+      <div class="row">
+        <div class='col-6'>
+          <div id='approval_plot'></div>
+        </div>
+      <div class="features">
         <div class="row">
-          <div class="col-md-8 ml-auto mr-auto">
-            <h2 class="title">Let&apos;s talk product</h2>
-            <h5 class="description">This is the paragraph where you can write more details about your product. Keep you
-              user engaged by providing meaningful information. Remember that by this time, the user is curious,
-              otherwise he wouldn&apos;t scroll to get here. Add a button if you want the user to see more.</h5>
-          </div>
-        </div>
-        <div class="features">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="info">
-                <div class="icon icon-info">
-                  <i class="material-icons">chat</i>
-                </div>
-                <h4 class="info-title">Free Chat</h4>
-                <p>Divide details about your product or agency work into parts. Write a few lines about each one. A
-                  paragraph describing a feature will be enough.</p>
+          <div class="col-md-4">
+            <div class="info">
+              <div class="icon icon-info">
+                <i class="material-icons">chat</i>
               </div>
-            </div>
-            <div class="col-md-4">
-              <div class="info">
-                <div class="icon icon-success">
-                  <i class="material-icons">verified_user</i>
-                </div>
-                <h4 class="info-title">Verified Users</h4>
-                <p>Divide details about your product or agency work into parts. Write a few lines about each one. A
-                  paragraph describing a feature will be enough.</p>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="info">
-                <div class="icon icon-danger">
-                  <i class="material-icons">fingerprint</i>
-                </div>
-                <h4 class="info-title">Fingerprint</h4>
-                <p>Divide details about your product or agency work into parts. Write a few lines about each one. A
-                  paragraph describing a feature will be enough.</p>
-              </div>
+              <h4 class="info-title">Free Chat</h4>
+              <p>Divide details about your product or agency work into parts. Write a few lines about each one. A
+                paragraph describing a feature will be enough.</p>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="section" id="carousel">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 mr-auto ml-auto">
+          <div class="col-md-4">
+            <div class="info">
+              <div class="icon icon-success">
+                <i class="material-icons">verified_user</i>
+              </div>
+              <h4 class="info-title">Verified Users</h4>
+              <p>Divide details about your product or agency work into parts. Write a few lines about each one. A
+                paragraph describing a feature will be enough.</p>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="section text-center">
-        <h2 class="title">Here is our team</h2>
-        <div class="team">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="team-player">
-                <div class="card card-plain">
-                  <div class="col-md-6 ml-auto mr-auto">
-                    <img src="./assets/img/faces/avatar.jpg" alt="Thumbnail Image"
-                      class="img-raised rounded-circle img-fluid">
-                  </div>
-                  <h4 class="card-title">Gigi Hadid
-                    <br>
-                    <small class="card-description text-muted">Model</small>
-                  </h4>
-                  <div class="card-body">
-                    <p class="card-description">You can write here details about one of your team members. You can give
-                      more details about what they do. Feel free to add some
-                      <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                  </div>
-                  <div class="card-footer justify-content-center">
-                    <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
-                    <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a>
-                    <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a>
-                  </div>
-                </div>
+          <div class="col-md-4">
+            <div class="info">
+              <div class="icon icon-danger">
+                <i class="material-icons">fingerprint</i>
               </div>
+              <h4 class="info-title">Fingerprint</h4>
+              <p>Divide details about your product or agency work into parts. Write a few lines about each one. A
+                paragraph describing a feature will be enough.</p>
             </div>
-            <div class="col-md-4">
-              <div class="team-player">
-                <div class="card card-plain">
-                  <div class="col-md-6 ml-auto mr-auto">
-                    <img src="./assets/img/faces/christian.jpg" alt="Thumbnail Image"
-                      class="img-raised rounded-circle img-fluid">
-                  </div>
-                  <h4 class="card-title">Christian Louboutin
-                    <br>
-                    <small class="card-description text-muted">Designer</small>
-                  </h4>
-                  <div class="card-body">
-                    <p class="card-description">You can write here details about one of your team members. You can give
-                      more details about what they do. Feel free to add some
-                      <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                  </div>
-                  <div class="card-footer justify-content-center">
-                    <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
-                    <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="team-player">
-                <div class="card card-plain">
-                  <div class="col-md-6 ml-auto mr-auto">
-                    <img src="./assets/img/faces/kendall.jpg" alt="Thumbnail Image"
-                      class="img-raised rounded-circle img-fluid">
-                  </div>
-                  <h4 class="card-title">Kendall Jenner
-                    <br>
-                    <small class="card-description text-muted">Model</small>
-                  </h4>
-                  <div class="card-body">
-                    <p class="card-description">You can write here details about one of your team members. You can give
-                      more details about what they do. Feel free to add some
-                      <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                  </div>
-                  <div class="card-footer justify-content-center">
-                    <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-twitter"></i></a>
-                    <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a>
-                    <a href="#pablo" class="btn btn-link btn-just-icon"><i class="fa fa-facebook-square"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="section section-contacts">
-        <div class="row">
-          <div class="col-md-8 ml-auto mr-auto">
-            <h2 class="text-center title">Work with us</h2>
-            <h4 class="text-center description">Divide details about your product or agency work into parts. Write a few
-              lines about each one and contact us about any further collaboration. We will responde get back to you in a
-              couple of hours.</h4>
-            <form class="contact-form">
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label class="bmd-label-floating">Your Name</label>
-                    <input type="email" class="form-control">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label class="bmd-label-floating">Your Email</label>
-                    <input type="email" class="form-control">
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="exampleMessage" class="bmd-label-floating">Your Message</label>
-                <textarea type="email" class="form-control" rows="4" id="exampleMessage"></textarea>
-              </div>
-              <div class="row">
-                <div class="col-md-4 ml-auto mr-auto text-center">
-                  <button class="btn btn-primary btn-raised">
-                    Send Message
-                  </button>
-                </div>
-              </div>
-            </form>
           </div>
         </div>
       </div>
@@ -279,9 +174,10 @@ The above copyright notice and this permission notice shall be included in all c
       </div>
     </div>
   </footer>
-  <!-- jquery & jquery-sparklines for sparklines -->
+  <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
+  <!-- jquery sparklines -->
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sparklines/2.1.2/jquery.sparkline.js"></script>
   <!-- core js libs in assets -->
@@ -289,12 +185,19 @@ The above copyright notice and this permission notice shall be included in all c
   <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
   <!-- d3 v6 -->
   <script src="https://d3js.org/d3.v6.min.js"></script>
-  <!-- moment.js for time -->
+  <!-- plotly js -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- math.js -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.2.0/math.min.js"></script>
+  <!-- moment.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"></script>
-  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+  <!--  slider & wnumb plugin -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.2/nouislider.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.2.0/wNumb.min.js"></script>
+  <!-- created js libs -->
   <script src="./assets/js/GT-project/slider.js"></script>
+  <script src="./assets/js/GT-project/covid_logic.js"></script>
+  <script src="./assets/js/GT-project/ratings_logic.js"></script>
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
   <script src="./assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
   <script>
