re-ordering functionality

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
     <div>Testing</div>
     <div class="row">
         <!-- The div that holds our map -->
-      <div id="map" class="col-md-6"></div>
-      <iframe src="index2.html" width="800" height="800" frameborder="10"></iframe>
+      <div id="map" class="col-md-12" style = "width: 400px; height: 400px;"></div>
+      <!-- <iframe src="index2.html" width="800" height="600" frameborder="10"></iframe> -->
     
-    <div class = "col-md-2">
+    <!-- <div class = "col-md-2">
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore architecto quis dolores ad iste assumenda sed distinctio facilis! Maiores, dignissimos similique! Tempora dolores distinctio eligendi reiciendis. Obcaecati consectetur cumque delectus?</p>
-    </div>
+    </div> -->
   </div>
 
   </div>
@@ -125,7 +125,7 @@
   <script type="text/javascript" src="static/js/config.js"></script>
   <!-- source:  https://leafletjs.com/examples/choropleth/ -->
   <script type="text/javascript" src="static/js/us-states.js"></script>
-  <script type="text/javascript" src="static/js/logic.js"></script>
+  <script type="text/javascript" src="static/js/logic_test_UPDATE.js"></script>
 </body>
 
 </html>
