adding heat layer and active fires

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 
   <!-- Our JavaScript files-->
   <script type="text/javascript" src="static/js/config.js"></script>
+  <script type="text/javascript" src="static/js/leaflet-heat.js"></script>
   <!-- source:  https://leafletjs.com/examples/choropleth/ -->
   <script type="text/javascript" src="static/js/us-states.js"></script>
   <script type="text/javascript" src="static/js/logic_test_UPDATE.js"></script>
