--- a/page_design/material-kit-master/index.html
+++ b/page_design/material-kit-master/index.html
@@ -16,7 +16,6 @@ The above copyright notice and this permission notice shall be included in all c
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png"> -->
   <link rel="icon" type="image/png" href="./assets/img/hindsight_favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
@@ -38,7 +37,7 @@ The above copyright notice and this permission notice shall be included in all c
     id="sectionsNav">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html">
+        <a class="navbar-brand" href="#">
           h i n d s i g h t</a>
       </div>
       <div style='width: 400px;'>
@@ -50,7 +49,7 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
   </nav>
   <div class="page-header header-filter" data-parallax="true"
-    style="background-image: url('./assets/img/profile_city.jpg')">
+    style="background-image: url('./assets/img/first_bg2.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -156,8 +155,8 @@ The above copyright notice and this permission notice shall be included in all c
               <h4 class="card-header card-header-primary">A closer look at the states</h4>
               <div class="card-body">
                 <p class="card-text">Select a state to view more specific data.</p>
-                <p>**ADD A DROPDOWN HERE-ISH**</p>
-                <div id='state_cases'></div>
+                <p>**ADD A DROPDOWN**</p>
+                <p>daily new cases, 7-day moving average:<span id='state_cases'></span></p>
               </div>
             </div>
             <!-- end state card -->
@@ -196,8 +195,8 @@ The above copyright notice and this permission notice shall be included in all c
       <nav class="float-left">
         <ul>
           <li>
-            <a href="https://www.creative-tim.com/">
-              Creative Tim
+            <a href="https://github.com/apizzo1/Project-2">
+              Explore the GitHub repo here
             </a>
           </li>
         </ul>
@@ -206,7 +205,7 @@ The above copyright notice and this permission notice shall be included in all c
         &copy;
         <script>
           document.write(new Date().getFullYear())
-        </script>, template courtesy of
+        </script>, template created by
         <a href="https://www.creative-tim.com/" target="blank">Creative Tim</a>.
       </div>
     </div>
