--- a/page_design/material-kit-master/index.html
+++ b/page_design/material-kit-master/index.html
@@ -151,14 +151,41 @@ The above copyright notice and this permission notice shall be included in all c
             <!-- end mobility card -->
             <br>
             <!-- start state card -->
-            <div class="card">
+            <div class="card card-nav-tabs">
+              <div class="card-header card-header-primary">
+                <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
+                <div class="nav-tabs-navigation">
+                  <span class="navbar-brand">A closer look at the states</span>
+                  <div class="nav-tabs-wrapper">
+                    <ul class="nav nav-tabs" data-tabs="tabs">
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="javascript:;" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          State
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <a class="dropdown-item" href="javascript:;">Action</a>
+                          <a class="dropdown-item" href="javascript:;">Another action</a>
+                          <a class="dropdown-item" href="javascript:;">Something else here</a>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="card-body ">
+                <p class="description">Select a state to view more specific data.</p>
+                <p>**ADD A DROPDOWN**</p>
+                <p>daily new cases, 7-day moving average:<span id='state_cases'></span></p>
+              </div>
+            </div>
+            <!-- <div class="card">
               <h4 class="card-header card-header-primary">A closer look at the states</h4>
               <div class="card-body">
                 <p class="card-text">Select a state to view more specific data.</p>
                 <p>**ADD A DROPDOWN**</p>
                 <p>daily new cases, 7-day moving average:<span id='state_cases'></span></p>
               </div>
-            </div>
+            </div> -->
             <!-- end state card -->
           </div>
         </div>
